# fenrir

./: .gitignore  .lcovrc  AI_CONTEXT.md  ARCHITECTURE_REFACTOR.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  LEGAL_MOVES_PLAN.md  Makefile  ORIGINAL_REQUEST.md  README.md  RELEASE_NOTES.md  TODO.md  hardware_test  main.cpp  perft.cpp  requirements.txt  run_aws.sh  run_selfplay.sh  start_training.bat
.agents/auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/challenger_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/challenger_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/explorer_initial/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  plan.md  progress.md
.agents/reviewer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/reviewer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/sub_orch_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  progress.md
.agents/worker_check_compilation/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/worker_m1/: handoff.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup.sh
ai/: AI_CONTEXT.md
clients/: play.py
docs/: ENGINE_CONVERSION_PLAN.md  build-system-improvements.md
include/abi/: c_api.h
include/abstract/: board.h
include/chess/: attacks.h  board.h  fen.h  move.h  moves.h  piece.h
include/chrono/: chrono.h
include/constants/: tuner.h
include/core/: core.h
include/engine/: engine.h
include/eval/: nn_eval.h
include/hardware/: hardware.h
include/interfaces/: iboardview.h
include/logger/: logger.h
include/mcts/: mcts.h
include/modifier/: modifier.h
include/nn/: nn.h
include/pgn/: pgn.h
include/search/: mcts.h
include/selfplay/: selfplay.h
include/tuner/: auto_tuner.h  tuning_parameters.h  utilization.h
include/uci/: uci.h
include/utils/: utils.h
onnx/: fenrir.onnx
plans/: AUDIT.md  PERFT_TESTING_PLAN.md  TODO.md
scripts/: arena.py  data_health.py  diagnose_position.py  elo_stockfish.py  export_onnx.py  game_rate.py  gauntlet_greedy.py  inspect_model.py  loki.sh  migrate_value_head.py  perft.py  probe_value.py  repair_value_head.py  run.sh  run_selfplay.sh  run_tests.sh  selfplay_compute.py  shakedown.sh  tactics.py  test.sh  tune_weight_decay.py
src/abi/: c_api.cpp
src/chess/: attacks.cpp  board.cpp  fen.cpp  move.cpp  moves.cpp  piece.cpp
src/chrono/: chrono.cpp
src/constants/: tuner.cpp
src/engine/: engine.cpp
src/eval/: nn_eval.cpp
src/hardware/: hardware.cpp
src/logger/: logger.cpp
src/mcts/: mcts.cpp
src/modifier/: modifier.cpp
src/nn/: nn.cpp
src/perft/: perft.cpp
src/pgn/: pgn.cpp
src/search/: mcts.cpp
src/selfplay/: selfplay.cpp
src/tuner/: auto_tuner.cpp  tuning_parameters.cpp  utilization.cpp
src/uci/: uci.cpp
src/utils/: utils.cpp
supervised/: supervised.py
tests/: dummy.onnx
tests/unit/: board.test.cpp  c_api.test.cpp  chrono.test.cpp  engine.test.cpp  fen.test.cpp  logger.test.cpp  mcts.test.cpp  mcts_fallback.test.cpp  modifier.test.cpp  move.test.cpp  moves.test.cpp  nn.test.cpp  nn_eval.test.cpp  pgn.test.cpp  piece.test.cpp  selfplay.test.cpp  uci.test.cpp  utils.test.cpp
tools/: arena.py  data_health.py  diagnose_position.py  elo_stockfish.py  export_onnx.py  game_rate.py  gauntlet_greedy.py  init_model.py  inspect_model.py  perft.py  selfplay_compute.py  tactics.py  tune_weight_decay.py
training/: model.py  requirements.txt  train.py
